UDP: don't disable read notification unless we have a datagram

The current logic that we will disable the read notification if we
have any data at all doesn't make sense for users who use the
receiveDatagram functionality, since they will not make any calls
that trigger the read notifier to be re-enabled unless there is a
datagram ready for us to hand back.

Changes in this cherry-pick:
  - Changed 10s chrono literal to 10'000

Changes in the 6.5 cherry-pick:
  - Changed from sleep(20ms) to msleep(20)

Fixes: QTBUG-105871
Change-Id: I0a1f1f8babb037d923d1124c2603b1cb466cfe18
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit b2ff0c2dc25f640a31fa170dd7cd8964bbcd51d6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 65406e0be7d5d2b687e3e07930ad60bcae893471)
(cherry picked from commit fef939cf879f691b8f487c56897ba54e1c696a1c)
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>